test: RelatedStockRepository 테스트 코드 추가 - RelatedStockRepositoryTest 파일 추가 - h2 사용에 따른 build.gradle 수정 및 application-test.properties 파일 추가 - RelateStock, ScrappedArticle 파일에 builder 설정 추가 - user 테이블 명 users로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
