--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -19,3 +19,41 @@ jwt.refreshTokenExpirationSeconds=60
 
 jwt.cookieExpirationSeconds=3600
 jwt.refreshCookieExpirationSeconds=604800
+
+# OAuth2 Dummy Data For Test
+# Google OAuth2 (dummy for test)
+spring.security.oauth2.client.registration.google.client-id=dummy-google-client-id
+spring.security.oauth2.client.registration.google.client-secret=dummy-google-client-secret
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=profile,email
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+# Naver OAuth2 (dummy for test)
+spring.security.oauth2.client.registration.naver.client-id=dummy-naver-client-id
+spring.security.oauth2.client.registration.naver.client-secret=dummy-naver-client-secret
+spring.security.oauth2.client.registration.naver.client-name=Naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.scope=name,email
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+# Kakao OAuth2 (dummy for test)
+spring.security.oauth2.client.registration.kakao.client-id=dummy-kakao-client-id
+spring.security.oauth2.client.registration.kakao.client-name=Kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
