--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "feature/user" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "feature/user" ]
+    branches: [ "develop" ]
 
 env:
   S3_BUCKET_NAME: oreumi-final-team1
