--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,6 +9,8 @@ on:
 env:
   S3_BUCKET_NAME: oreumi-final-team1
   AWS_REGION: ap-northeast-2
+  CODEDEPLOY_NAME: final-team1-github-actions
+  CODEDEPLOY_GROUP: final-team1-actions-group
 
 jobs:
   build:
@@ -47,6 +49,9 @@ jobs:
 
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
+
+    - name: Code Deploy
+      run: aws deploy create-deployment --application-name $CODEDEPLOY_NAME --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name $CODEDEPLOY_GROUP --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$GITHUB_SHA.zip
 
   dependency-submission:
 
