--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,8 +9,8 @@ on:
 env:
   S3_BUCKET_NAME: oreumi-final-team1
   AWS_REGION: ap-northeast-2
-  CODEDEPLOY_NAME: final-team1-github-actions
-  CODEDEPLOY_GROUP: final-team1-actions-group
+  CODEDEPLOY_NAME: github-actions
+  CODEDEPLOY_GROUP: team1-github-actions-group
 
 jobs:
   build:
