--- a/appspec.yml
+++ b/appspec.yml
@@ -12,6 +12,11 @@ permissions:
     group: ec2-user
 
 hooks:
+  BeforeInstall:
+    - location: scripts/writeApplicationProperties.sh
+      timeout: 60
+      runas: ec2-user
+
   ApplicationStart:
     - location: scripts/deploy.sh
       timeout: 60
