chore: content-comment-mypage-merge와 병합 후 코드 업데이트

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,3 +11,5 @@ spring.jpa.defer-datasource-initialization=true
 # Warning: DO NOT ENABLE IN PRODUCTION
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.application.name=FinalProject
+
