fix : alan, 네이버 검색 api 관련 코드 수정

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -8,11 +8,11 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALS
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
+
 
 # JWT expiration time
 jwt.accessTokenExpirationSeconds=1
@@ -58,3 +58,8 @@ spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/o
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
+# alan, naver search dummy data
+com.naver.search.api-key=dummy-naver-api-key
+com.naver.search.api-secret=dummy-naver-api-secret
+kr.gov.data.api-key=dummy-public-api-key
+ai.est.alan.client-id=dummy-alan-client-id
